--- a/JS/classwork_49/index.html
+++ b/JS/classwork_49/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
     <title>Урок №49</title>
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
@@ -312,13 +313,17 @@
                     </div>
 
                     <div class="bottom__right">
-                        <form action="#" method="GET">
-                            <input type="text" placeholder="Search..." name="search">
-
-                            <button type="submit">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </form>
+                        <div class="block__search">
+                            <form action="#" method="GET" class="search">
+                                <input type="text" placeholder="Search..." name="search">
+    
+                                <button type="submit">
+                                    <i class="fas fa-search"></i>
+                                </button>
+                            </form>
+                            <div class="search__result"></div>
+                        </div>
+                        
 
                         <div class="shopcard">
                             <div class="shopcard__inner">
